objects/SA_Audit__Fields_Profile_Log__c.object
<CustomObject>
    <fields>
        <fullName>SA_Audit__Objects_And_Fields_Log__c</fullName>
        <label>Objects And Fields Log</label>
        <referenceTo>SA_Audit__Objects_And_Fields_Log__c</referenceTo>
        <relationshipLabel>Fields Profile Logs</relationshipLabel>
        <relationshipName>Fields_Profile_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SA_Audit__ProfileId__c</fullName>
        <label>ProfileId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA_Audit__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Fields Profile Log</label>
    <nameField>
        <label>Fields Profile Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fields Profile Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>